--- a/Advanced_Ens_tech/Bagging/Simargl2022_Bagging_tech.ipynb
+++ b/Advanced_Ens_tech/Bagging/Simargl2022_Bagging_tech.ipynb
@@ -17,7 +17,6 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.neural_network import MLPClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import BaggingClassifier\n",
@@ -80,9 +79,9 @@
     "    X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
     "# Convert data to TensorFlow tensors\n",
-    "X_train_tf = tf.convert_to_tensor(X_train.values, dtype=tf.float32)\n",
-    "y_train_tf = tf.convert_to_tensor(pd.factorize(y_train)[0], dtype=tf.int64)\n",
-    "X_test_tf = tf.convert_to_tensor(X_test.values, dtype=tf.float32)\n",
+    "# X_train_tf = tf.convert_to_tensor(X_train.values, dtype=tf.float32)\n",
+    "# y_train_tf = tf.convert_to_tensor(pd.factorize(y_train)[0], dtype=tf.int64)\n",
+    "# X_test_tf = tf.convert_to_tensor(X_test.values, dtype=tf.float32)\n",
     "\n",
     "# Initialize MirroredStrategy for GPU acceleration\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
