--- a/Advanced_Ens_tech/Boosting/Simargl2022_Boosting_tech/Sim_Adaptive_Boosting_tech.ipynb
+++ b/Advanced_Ens_tech/Boosting/Simargl2022_Boosting_tech/Sim_Adaptive_Boosting_tech.ipynb
@@ -2,280 +2,6 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# -*- coding: utf-8 -*- \n",
-    "# @Time : 2024/2/5 16:00\n",
-    "# @Author : Ismail Bibers\n",
-    "# This code is written in Python 3.7. To install the required packages, run the following commands:\n",
-    "# pip install pandas numpy matplotlib seaborn scikit-learn sympy\n",
-    "# This code is applicable to the Simargl 2022 dataset. \n",
-    "# implemented Decision Tree Classifier. \n",
-    "\n",
-    "import pandas as pd\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
-    "from sklearn.metrics import accuracy_score, classification_report\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "import seaborn as sns\n",
-    "\n",
-    "# Load the dataset\n",
-    "df = pd.read_csv('/home/ibibers@ads.iu.edu/IDS_Datasets/Combined_datasets/Simargl2022_combined_dataset.csv')\n",
-    "\n",
-    "# Drop duplicates: same observation but multiple occurences\n",
-    "main_df_1 = df.drop_duplicates(keep='first')\n",
-    "\n",
-    "# Drop columns that have just one unique value, the model wont learn form columns like this.\n",
-    "one_value = main_df_1.columns[main_df_1.nunique() == 1]\n",
-    "main_df_2 = main_df_1.drop(columns = one_value, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Take random samples of the dataset\n",
-    "# sample_df_1 = main_df_2.sample(frac=0.6, random_state=42)\n",
-    "sample_df_1 = main_df_2.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Extract subsample of data\n",
-    "print (\" Extract subsample of data: \")\n",
-    "print(sample_df_1['ALERT'].value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Git the features\n",
-    "# print (main_df_2.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sample_df_1.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # To see the features that are need to be encoded \"Which are not numerical\"\n",
-    "# categorical_columns = sample_df_1.select_dtypes(include=['object']).columns\n",
-    "# print(\"Categorical Columns:\", categorical_columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Count the numner of the novsalues in the categorical columns\n",
-    "# print(sample_df_1.isna().sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Print the columns with leading spaces, if any\n",
-    "# columns_with_leading_spaces = [col for col in main_df_2.columns if col.startswith(' ')]\n",
-    "\n",
-    "# if columns_with_leading_spaces:\n",
-    "#     print(\"Columns with leading spaces:\", columns_with_leading_spaces)\n",
-    "# else:\n",
-    "#     print(\"No columns with leading spaces found.\")\n",
-    "\n",
-    "# # Remove leading space character in all feature names\n",
-    "# # main_df_2.rename(columns=lambda x: x.lstrip(), inplace=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sample_df_1 = sample_df_1.drop(['ANOMALY', 'IPV4_SRC_ADDR'] , axis=1)\n",
-    "median_anomaly = sample_df_1['ANOMALY'].median()\n",
-    "sample_df_1['ANOMALY'].fillna(median_anomaly, inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample_df_1['ALERT'].fillna('Normal', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import OrdinalEncoder\n",
-    "\n",
-    "categorical_columns = ['PROTOCOL_MAP', 'IPV4_DST_ADDR', 'IPV4_SRC_ADDR']\n",
-    "\n",
-    "# Create a copy of the original DataFrame to avoid modifying the original data\n",
-    "df_encoded = sample_df_1.copy()\n",
-    "\n",
-    "# Initialize the OrdinalEncoder\n",
-    "ordinal_encoder = OrdinalEncoder()\n",
-    "\n",
-    "# Fit and transform the categorical columns\n",
-    "df_encoded[categorical_columns] = ordinal_encoder.fit_transform(sample_df_1[categorical_columns])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Fill nan values\n",
-    "# print(sample_df_1.isna().sum())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Sampled Dataset Overview:\")\n",
-    "\n",
-    "dropped_df = ['ALERT']\n",
-    "X = df_encoded.drop(dropped_df, axis=1)\n",
-    "y = df_encoded['ALERT']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initial train test split set and split the dataset into training and testing sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
-    "\n",
-    "\n",
-    "# Adaptive boosting or AdaBoost\n",
-    "# AdaBoost is a boosting algorithm which creates a strong classifier from a number of weak classifiers.\n",
-    "AdaB_model = AdaBoostClassifier(random_state=46)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AdaB_model.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y_pred_encoded = AdaB_model.predict(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Evaluate the model\n",
-    "accuracy = accuracy_score(y_test, y_pred_encoded)\n",
-    "print(f\"Accuracy: {accuracy}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#  Classificaiton Report \n",
-    "print(\"\\nClassification Report:\")\n",
-    "print(classification_report(y_test, y_pred_encoded))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "# Confusion matrix with string labels\n",
-    "conf_mat = confusion_matrix(y_test, y_pred_encoded)\n",
-    "\n",
-    "# Get unique class labels from y_test and y_pred_encoded\n",
-    "unique_labels = np.unique(np.concatenate((y_test, y_pred_encoded)))\n",
-    "\n",
-    "# Plotting the Confusion Matrix with class labels\n",
-    "plt.figure(figsize=(6, 6))\n",
-    "sns.heatmap(conf_mat, annot=True, fmt=\"d\", cmap=\"Blues\", cbar=False,\n",
-    "            xticklabels=unique_labels, yticklabels=unique_labels)\n",
-    "plt.title('Confusion Matrix')\n",
-    "plt.xlabel('Predicted')\n",
-    "plt.ylabel('Actual')\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# importances of features in the decision tree model \n",
-    "importance = AdaB_model.feature_importances_\n",
-    "importance_dict = dict(zip(X.columns.values, importance))\n",
-    "sorted_importance = dict(sorted(importance_dict.items(), key=lambda x: x[1], reverse=True))\n",
-    "\n",
-    "plt.figure(figsize=(7, 13))\n",
-    "sns.barplot(x=list(sorted_importance.values()), y=list(sorted_importance.keys()), palette='cubehelix')\n",
-    "plt.xlabel('Importance Value')\n",
-    "plt.ylabel('Feature Name')\n",
-    "plt.title('Feature Importance in Adaptive Classifier')\n",
-    "plt.show()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -302,28 +28,37 @@
     }
    ],
    "source": [
+    "# -*- coding: utf-8 -*-\n",
+    "# @Time : 2024/2/5 16:00\n",
+    "# @Author : Ismail Bibers\n",
+    "# This code is written in Python 3.7. To install the required packages, run the following commands:\n",
+    "# pip install pandas numpy matplotlib seaborn scikit-learn sympy\n",
+    "# This code is applicable to the Simargl 2022 dataset.\n",
+    "# implemented Adaptive Boosting (AdaBoost) algorithm for the Simargl 2022 dataset.\n",
+    "\n",
+    "\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.ensemble import StackingClassifier\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
-    "import xgboost as xgb\n",
-    "import lightgbm as lgb\n",
     "from sklearn.metrics import accuracy_score, classification_report\n",
     "from sklearn.metrics import confusion_matrix\n",
     "import seaborn as sns\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the cleaned Simargl 2022 dataset\n",
     "df = pd.read_csv(\n",
-    "    '/home/ibibers@ads.iu.edu/IDS_Datasets/Combined_datasets/Simargl_cleaned_data.csv')\n",
+    "    '/home/ibibers@ads.iu.edu/IDS_Datasets/Combined_datasets/Simargl_cleaned_dataset.csv')\n",
     "\n",
     "tf.keras.backend.clear_session()"
    ]
