--- a/Simple_Ensemble_Techniques/Averaging/Simargl2022_Averaging_tech.ipynb
+++ b/Simple_Ensemble_Techniques/Averaging/Simargl2022_Averaging_tech.ipynb
@@ -2,9 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_2090561/3986373687.py:7: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n",
+      "2024-02-28 02:33:00.590242: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2024-02-28 02:33:00.625223: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-02-28 02:33:00.625265: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-02-28 02:33:00.626313: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-02-28 02:33:00.632632: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-02-28 02:33:01.448354: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "# This code is written in Python 3.7. To install the required packages, run the following commands:\n",
@@ -28,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +70,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Extract subsample of data: \n",
+      "ALERT\n",
+      "Normal               15049330\n",
+      "Denial of Service     5138973\n",
+      "Port Scanning         4170194\n",
+      "Malware                   571\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Extract subsample of data\n",
     "print(\" Extract subsample of data: \")\n",
@@ -59,9 +95,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ALERT\n",
+      "Normal               15049330\n",
+      "Denial of Service     5138973\n",
+      "Port Scanning         4170194\n",
+      "Malware                   571\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "dropped_df = ['ALERT']\n",
     "X = df.drop(dropped_df, axis=1)\n",
@@ -76,18 +125,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:GPU:0', '/job:localhost/replica:0/task:0/device:GPU:1')\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "# Initial train test split set and split the dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
-    "# Convert data to TensorFlow tensors\n",
-    "X_train_tf = tf.convert_to_tensor(X_train.values, dtype=tf.float32)\n",
-    "y_train_tf = tf.convert_to_tensor(pd.factorize(y_train)[0], dtype=tf.int64)\n",
-    "X_test_tf = tf.convert_to_tensor(X_test.values, dtype=tf.float32)\n",
+    "# # Convert data to TensorFlow tensors\n",
+    "# X_train_tf = tf.convert_to_tensor(X_train.values, dtype=tf.float32)\n",
+    "# y_train_tf = tf.convert_to_tensor(pd.factorize(y_train)[0], dtype=tf.int64)\n",
+    "# X_test_tf = tf.convert_to_tensor(X_test.values, dtype=tf.float32)\n",
     "\n",
     "# Initialize MirroredStrategy for GPU acceleration\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
