--- a/Simple_Ensemble_Techniques/Weighted Averaging/Simrgal2022_Weighted_Averaging_tech.ipynb
+++ b/Simple_Ensemble_Techniques/Weighted Averaging/Simrgal2022_Weighted_Averaging_tech.ipynb
@@ -163,9 +163,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pred1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Final prediction and 0.4 0.3 0.3 weights are used\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# and 0.4 0.3 0.3 weights mean that 40% of the weight is given to the first model, 30% to the second model, and 30% to the third model.\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m finalpred \u001b[38;5;241m=\u001b[39m ((\u001b[43mpred1\u001b[49m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0.4\u001b[39m ) \u001b[38;5;241m+\u001b[39m (pred2\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m0.3\u001b[39m)\u001b[38;5;241m+\u001b[39m(pred3\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m0.3\u001b[39m))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pred1' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Final prediction and 0.4 0.3 0.3 weights are used\n",
     "# and 0.4 0.3 0.3 weights mean that 40% of the weight is given to the first model, 30% to the second model, and 30% to the third model.\n",
