--- a/Simple_Ensemble_Techniques/Max Voting/Simargl2022_Max_Voting_tech.ipynb
+++ b/Simple_Ensemble_Techniques/Max Voting/Simargl2022_Max_Voting_tech.ipynb
@@ -2,31 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2154115/2257194967.py:7: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n",
-      "2024-02-28 12:51:24.386658: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-02-28 12:51:24.503237: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-02-28 12:51:24.503322: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-02-28 12:51:24.523474: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-02-28 12:51:24.572846: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-02-28 12:51:25.386826: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# -*- coding: utf-8 -*- \n",
     "# This code is written in Python 3.7. To install the required packages, run the following commands:\n",
@@ -50,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,23 +39,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " Extract subsample of data: \n",
-      "ALERT\n",
-      "Normal               15049330\n",
-      "Denial of Service     5138973\n",
-      "Port Scanning         4170194\n",
-      "Malware                   571\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "df = df.sample(frac=0.75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Extract subsample of data\n",
     "print(\" Extract subsample of data: \")\n",
@@ -86,22 +59,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ALERT\n",
-      "Normal               15049330\n",
-      "Denial of Service     5138973\n",
-      "Port Scanning         4170194\n",
-      "Malware                   571\n",
-      "Name: count, dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dropped_df = ['ALERT']\n",
     "X = df.drop(dropped_df, axis=1)\n",
@@ -116,28 +76,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Using MirroredStrategy with devices ('/job:localhost/replica:0/task:0/device:GPU:0', '/job:localhost/replica:0/task:0/device:GPU:1')\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-02-28 12:52:33.401953: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 46862 MB memory:  -> device: 0, name: NVIDIA RTX A6000, pci bus id: 0000:67:00.0, compute capability: 8.6\n",
-      "2024-02-28 12:52:33.402595: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:1 with 46804 MB memory:  -> device: 1, name: NVIDIA RTX A6000, pci bus id: 0000:68:00.0, compute capability: 8.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initial train test split set and split the dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "\n",
+    "\n",
+    "# Standardize numerical features (if applicable)\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
     "\n",
     "# Initialize MirroredStrategy for GPU acceleration\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
@@ -153,6 +103,7 @@
     "    # the estimator parameter is a list containing the three models we have initialized\n",
     "    Vot_model = VotingClassifier(\n",
     "        estimators=[('knn', Knn_model), ('dt', dt_model), ('rf' , rf_model)], voting='hard')\n",
+    "\n",
     "    Vot_model.fit(X_train, y_train)\n",
     "    Vot_model.score(X_test, y_test)\n",
     "    # Make predictions on the test set\n",
