--- a/Simple_Ensemble_Techniques/Weighted Averaging/Simrgal2022_Weighted_Averaging_tech.ipynb
+++ b/Simple_Ensemble_Techniques/Weighted Averaging/Simrgal2022_Weighted_Averaging_tech.ipynb
@@ -2,31 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_2174455/2584575624.py:7: DeprecationWarning: \n",
-      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-      "but was not found to be installed on your system.\n",
-      "If this would cause problems for you,\n",
-      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-      "        \n",
-      "  import pandas as pd\n",
-      "2024-02-28 16:34:04.877605: I tensorflow/core/util/port.cc:113] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2024-02-28 16:34:04.947735: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:9261] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-02-28 16:34:04.947778: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:607] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-02-28 16:34:04.949275: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1515] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2024-02-28 16:34:04.959614: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX512F AVX512_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2024-02-28 16:34:06.246828: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# -*- coding: utf-8 -*- \n",
     "# This code is written in Python 3.7. To install the required packages, run the following commands:\n",
@@ -40,6 +18,8 @@
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.calibration import LabelEncoder\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
@@ -50,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.sample(frac=0.75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -70,10 +59,10 @@
      "text": [
       " Extract subsample of data: \n",
       "ALERT\n",
-      "Normal               15049330\n",
-      "Denial of Service     5138973\n",
-      "Port Scanning         4170194\n",
-      "Malware                   571\n",
+      "Normal               11287883\n",
+      "Denial of Service     3854136\n",
+      "Port Scanning         3126855\n",
+      "Malware                   427\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -86,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -94,10 +83,10 @@
      "output_type": "stream",
      "text": [
       "ALERT\n",
-      "Normal               15049330\n",
-      "Denial of Service     5138973\n",
-      "Port Scanning         4170194\n",
-      "Malware                   571\n",
+      "Normal               11287883\n",
+      "Denial of Service     3854136\n",
+      "Port Scanning         3126855\n",
+      "Malware                   427\n",
       "Name: count, dtype: int64\n"
      ]
     }
@@ -116,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -130,8 +119,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-02-28 16:36:30.285694: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1046 MB memory:  -> device: 0, name: NVIDIA RTX A6000, pci bus id: 0000:67:00.0, compute capability: 8.6\n",
-      "2024-02-28 16:36:30.311736: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:1 with 1047 MB memory:  -> device: 1, name: NVIDIA RTX A6000, pci bus id: 0000:68:00.0, compute capability: 8.6\n"
+      "2024-03-02 18:55:26.828579: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 1046 MB memory:  -> device: 0, name: NVIDIA RTX A6000, pci bus id: 0000:67:00.0, compute capability: 8.6\n",
+      "2024-03-02 18:55:26.829179: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1929] Created device /job:localhost/replica:0/task:0/device:GPU:1 with 1047 MB memory:  -> device: 1, name: NVIDIA RTX A6000, pci bus id: 0000:68:00.0, compute capability: 8.6\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "predict_proba is not available when voting='hard'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[19], line 25\u001b[0m\n\u001b[1;32m     22\u001b[0m     ensemble\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)  \u001b[38;5;66;03m# Train the ensemble with early stopping if necessary\u001b[39;00m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# Make predictions\u001b[39;00m\n\u001b[0;32m---> 25\u001b[0m predictions \u001b[38;5;241m=\u001b[39m \u001b[43mensemble\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpredict_proba\u001b[49m(X_test)\n",
+      "File \u001b[0;32m~/micromamba/lib/python3.9/site-packages/sklearn/utils/_available_if.py:32\u001b[0m, in \u001b[0;36m_AvailableIfDescriptor.__get__\u001b[0;34m(self, obj, owner)\u001b[0m\n\u001b[1;32m     26\u001b[0m attr_err \u001b[38;5;241m=\u001b[39m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[1;32m     27\u001b[0m     \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThis \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mrepr\u001b[39m(owner\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m has no attribute \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mrepr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mattribute_name)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m     28\u001b[0m )\n\u001b[1;32m     29\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m obj \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;66;03m# delegate only on instances, not the classes.\u001b[39;00m\n\u001b[1;32m     31\u001b[0m     \u001b[38;5;66;03m# this is to allow access to the docstrings.\u001b[39;00m\n\u001b[0;32m---> 32\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcheck\u001b[49m\u001b[43m(\u001b[49m\u001b[43mobj\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m     33\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m attr_err\n\u001b[1;32m     34\u001b[0m     out \u001b[38;5;241m=\u001b[39m MethodType(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfn, obj)\n",
+      "File \u001b[0;32m~/micromamba/lib/python3.9/site-packages/sklearn/ensemble/_voting.py:383\u001b[0m, in \u001b[0;36mVotingClassifier._check_voting\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    381\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_check_voting\u001b[39m(\u001b[38;5;28mself\u001b[39m):\n\u001b[1;32m    382\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvoting \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhard\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[0;32m--> 383\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAttributeError\u001b[39;00m(\n\u001b[1;32m    384\u001b[0m             \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mpredict_proba is not available when voting=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mrepr\u001b[39m(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvoting)\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    385\u001b[0m         )\n\u001b[1;32m    386\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mTrue\u001b[39;00m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: predict_proba is not available when voting='hard'"
      ]
     }
    ],
@@ -139,45 +141,47 @@
     "# Initial train test split set and split the dataset into training and testing sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
     "\n",
+    "\n",
+    "# Standardize numerical features if necessary (replace with appropriate scaling if needed)\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
+    "# Initialize models and create VotingClassifier ensemble\n",
+    "model1 = DecisionTreeClassifier()\n",
+    "model2 = KNeighborsClassifier()\n",
+    "model3 = RandomForestClassifier()\n",
+    "ensemble = VotingClassifier(estimators=[('dt', model1), ('knn', model2), ('rf', model3)],\n",
+    "                           voting='hard', weights=[0.4, 0.3, 0.3])  # Experiment with weights\n",
+    "\n",
     "# Initialize MirroredStrategy for GPU acceleration\n",
     "strategy = tf.distribute.MirroredStrategy()\n",
     "\n",
     "# Train the models\n",
     "with strategy.scope():\n",
-    "    # initialize the models\n",
-    "    model1 = DecisionTreeClassifier()\n",
-    "    model2 = KNeighborsClassifier()\n",
-    "    model3 = RandomForestClassifier()\n",
+    "    ensemble.fit(X_train, y_train)  # Train the ensemble with early stopping if necessary\n",
     "\n",
-    "    # Train the models\n",
-    "    model1.fit(X_train, y_train)\n",
-    "    model2.fit(X_train, y_train)\n",
-    "    model3.fit(X_train, y_train)\n",
-    "\n",
-    "    # Predictions\n",
-    "    # We use the predict_proba method to get the probabilities of each class\n",
-    "    pred1 = model1.predict_proba(X_test)\n",
-    "    pred2 = model2.predict_proba(X_test)\n",
-    "    pred3 = model3.predict_proba(X_test)"
+    "# Make predictions\n",
+    "predictions = ensemble.predict_proba(X_test)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pred1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Final prediction and 0.4 0.3 0.3 weights are used\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m# and 0.4 0.3 0.3 weights mean that 40% of the weight is given to the first model, 30% to the second model, and 30% to the third model.\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m finalpred \u001b[38;5;241m=\u001b[39m ((\u001b[43mpred1\u001b[49m \u001b[38;5;241m*\u001b[39m \u001b[38;5;241m0.4\u001b[39m ) \u001b[38;5;241m+\u001b[39m (pred2\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m0.3\u001b[39m)\u001b[38;5;241m+\u001b[39m(pred3\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m0.3\u001b[39m))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pred1' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "y_pred = np.argmax(predictions, axis=1)\n",
+    "# Evaluate the model (consider using more comprehensive metrics)\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "print(f\"Accuracy: {accuracy}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Final prediction and 0.4 0.3 0.3 weights are used\n",
     "# and 0.4 0.3 0.3 weights mean that 40% of the weight is given to the first model, 30% to the second model, and 30% to the third model.\n",
